# building-a-LLM

./: .gitignore  CONTEXT.md  CONTEXT_2.md  MANUAL_EQUIPES.md  PIPELINE_OTIMIZADO.md  PROBLEMAS_LOGICA_EXTRACAO.md  README.md  RELATORIO_CORPUS_DOM-PI.md  corpus_tabuleiros.ndjson  download_demais.sh  monitor_os.sh  pipeline_otimizado.sh  pyproject.toml  relatorio_dapt_dompi.html  relatorio_q5_rag.html  relatorio_questao1.html  relatorio_tecnico_completo.html  run_extracao.sbatch  scrape_demais.sh  scraper_isolado.py  scraping_carnaubais_2025.csv  setup_territorios.sh  setup_venvs.sh  to-do_territorios.txt  validar_municipios.py
avaliacao/: avaliar_modelo.py  comparar_resultados.py  gerar_relatorio_q2.py  inferencia_comparativa.py  inferencia_multi.py  inferencias_fullft_unificado.json  inferencias_q1_fullft_teresina_v2.json  inferencias_q1_fullft_teresina_v3.json  inferencias_q1_fullft_unificado_v2.json  inferencias_q1_qlora_unificado_v2.json  inferencias_q2_lora_1.5b.json  inferencias_q2_qlora_1.5b.json  inferencias_q3_fullft_teresina.json  preparar_held_out.py  resultados_baseline_1.5b.json  resultados_baseline_teresina_1.5b.json  resultados_fullft_unificado.json  resultados_fullft_unificado_v2.json  resultados_q1_fullft_teresina_v2.json  resultados_q1_fullft_teresina_v3.json  resultados_q1_qlora_unificado_v2.json
benchmark/: dompi_qa.jsonl  guardrails_30.jsonl
docs/: BENCHMARK_OCR.md  PLANO_PRETREINO.md  RELATORIO_SESSAO_E_MANUAL.md
docs/research/: ConPublicacaoGeral.php  alvo.md
guardrails/: avaliar_guardrails.py  guardrails_pipeline.py
rag/: upload_hf.py  upload_q1_models.py
rag/index/: README.md
rag/resultados/: consolidado.json  retrieval.json  traces.json
src/dompi_scraper/: __init__.py  bench_ocr.py  benchmark_extracao.py  download_pdfs.py  engine_worker.py  extrair_territorio.py  extrator_docling.py  extrator_isolado.py  extrator_marker.py  extrator_paddle.py  limpeza_textos.py  orquestrador_extracao.py  orquestrador_tesseract.py  pipeline.py  processar_pdfs.py  reconstruir_coleta.py  schema_utils.py  scraper_isolado.py  shared_utils.py  territorios_pi.py  worker_client.py  worker_docling.py
src/dompi_scraper/datalake/: __init__.py  build_corpus.py  build_limpo.py  catalog.py  corrigir_datas.py  corrigir_municipios.py  dedup_aproximada.py  empacotar_hf.py  empacotar_teresina.py  fatiar_megadocs.py  gerar_manifesto_pdfs.py  ingest_extraido.py  io.py  qualidade.py  query.py
src/dompi_scraper/selenium/: BENCHMARK_GUIDE.md  README.md  __init__.py  aiohttp_bench.py  analyze_results.py  common_downloader.py  profiles.yaml  quick_test.sh  requests_bench.py  run_benchmark.py  runner_bench.py  sample_benchmark_input.py  selenium_bench.py  selenium_poc.py  validate_env.py
src/vector_db/: construir_banco.py  importar_jsonl_chroma.py
trabalho-final/: README.md  TrabalhoFinal-enunciados.md  VALIDACAO_METODOLOGICA.md  relatorio_tecnico_completo.html
trabalho-final/Q1-pretreino-continuado/: enunciado.md  relatorio.md  relatorio_q1.html
trabalho-final/Q1-pretreino-continuado/resultados/: curva_pontos.json
trabalho-final/Q1-pretreino-continuado/scripts/: avaliar_geracao.py  curva_dose_resposta.py  limpar_corpus_ocr.py  preparar_heldout_geral.py  pretreino_continuado.py  pretreino_fsdp.py  pretreino_fullft.py  pretreino_fullft_unsloth.py  pretreino_lora.py  run_gerar_relatorio_q2.sbatch  run_pretreino.sbatch  run_q1_dose.sbatch  run_q1_evidencias.sbatch  run_q1_fullft_limpo.sbatch  run_q1_fullft_teresina_v2.sbatch  run_q1_fullft_teresina_v3.sbatch  run_q1_llama32_1gpu.sbatch  run_q1_llama32_fsdp.sbatch  run_q1_unsloth_bench.sbatch  run_q2_lora_1.5b.sbatch  run_q3_fullft_teresina.sbatch
trabalho-final/Q2-pos-treino-sft/: apresentacao_q2q3.html  apresentacao_q2q3.md  enunciado.md  painel_respostas_q2q3.html  relatorio.md  relatorio_q2.html
trabalho-final/Q2-pos-treino-sft/benchmark/: dc_bench.jsonl
trabalho-final/Q2-pos-treino-sft/resultados/: README.md  bench_baseline_0.5b.json  bench_baseline_1.5b.json  bench_full_0.5b.json  bench_full_1.5b.json  bench_lora_0.5b.json  bench_lora_1.5b.json  bench_qlora_0.5b.json  bench_qlora_1.5b.json  heldout_baseline_0.5b.json  heldout_baseline_1.5b.json  heldout_full_0.5b.json  heldout_full_1.5b.json  heldout_lora_0.5b.json  heldout_lora_1.5b.json  heldout_qlora_0.5b.json  heldout_qlora_1.5b.json  juiz_baseline_0.5b.json  juiz_baseline_1.5b.json  juiz_full_0.5b.json  juiz_full_1.5b.json  juiz_lora_0.5b.json  juiz_lora_1.5b.json  juiz_qlora_0.5b.json  juiz_qlora_1.5b.json  (+1 more)
trabalho-final/Q3-pos-treino-lora-qlora/: enunciado.md  relatorio.md  relatorio_q3.html
trabalho-final/Q4-destilacao/: HF_CARD_copa2026.md  HF_CARD_uld.md  HF_MODEL_CARD.md  enunciado.md  relatorio.md  relatorio_q4.html
trabalho-final/Q5-rag/: enunciado.md  relatorio.md  relatorio_q5.html
trabalho-final/Q6-guardrails/: enunciado.md  relatorio.md  relatorio_q6.html
trabalho-final/assets/: estilo.css
treino/: config_qwen05b.yaml  instalar_deps.sh  preparar_corpus_teresina.py  pretreino_continuado.py  pretreino_fullft.py  pretreino_lora.py  run_eval_v3.sbatch  run_fullft_unificado.sbatch  run_inferencias_q1.sbatch  run_job389_teresina.sbatch  run_pretreino.sbatch  run_q1_fullft_unificado_v2.sbatch  run_q1_qlora_unificado_v2.sbatch  run_q2_lora_0.5b.sbatch  run_q2_lora_1.5b_v2.sbatch  run_q2_qlora_1.5b.sbatch
(+67 files in other folders)
