[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dompi-scraper"
version = "0.1.0"
description = "Pipeline de coleta, deduplicacao e auditoria de publicacoes do DOMPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "bs4>=0.0.2",
    "chromadb>=1.5.8",
    "duckdb>=1.1.0",
    "pyarrow>=15.0.0",
    "langchain-text-splitters>=1.1.2",
    "polars>=1.0.0",
    "numpy>=2.4.4",
    "ollama>=0.6.2",
    "opencv-python>=4.13.0.92",
    "pdf2image>=1.17.0",
    "pillow>=10.4.0",
    "pymupdf>=1.27.2.2",
    "pypdf>=5.4.0",
    "pytesseract>=0.3.13",
    "psutil>=6.1.1",
    "pyyaml>=6.0.3",
    "pandas>=2.3.0",
    "matplotlib>=3.10.0",
    "requests>=2.33.1",
    "selenium>=4.43.0",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "webdriver-manager>=4.0.2",
    "hf>=1.18.0",
    "datasketch>=1.10.0",
    "wordfreq>=3.1.1",
]

# IMPORTANTE: paddlepaddle/paddleocr NÃO ficam nas deps principais de propósito.
# O build `paddlepaddle-gpu` (cu126) e o `torch` (cu13) sobrescrevem as mesmas
# libs no namespace `nvidia/` (libnccl, libcudnn) e quebram o `import torch`.
# Por isso o PaddleOCR vive num venv ISOLADO (`.venv-paddle`), criado por
# `setup_venvs.sh`, e o orquestrador o dispara via subprocesso (engine_worker).
# Mantê-los aqui faria `uv sync`/`uv run` reinstalar paddle no `.venv` principal
# e requebrar o torch. Use o extra `paddle` SOMENTE para montar o `.venv-paddle`.
[project.optional-dependencies]
docling = [
    "docling>=2.0.0",
    # docling-ibm-models (layout/TableFormer) importa cv2. Headless evita a
    # dependência de libGL do sistema (melhor em WSL/servidor sem X).
    "opencv-python-headless>=4.10",
]
paddle = [
    "paddlepaddle>=3.3.1",
    # <3: o pipeline usa a API PP-Structure 2.10 (`from paddleocr import PPStructure`).
    # O paddleocr 3.x renomeou para PPStructureV3 (API/saída diferentes) e quebra o worker.
    "paddleocr>=2.10,<3",
]

[project.scripts]
dompi-crawl = "dompi_scraper.requests_CampoMaior:main"
dompi-dedupe-pdfs = "dompi_scraper.baixar_pdfs_unicos:main"
dompi-extract-text = "dompi_scraper.extrair_texto_pdfs_unicos:main"
dompi-enrich = "dompi_scraper.enriquecer_registros_texto:main"
dompi-audit = "dompi_scraper.auditoria_integridade:main"
dompi-benchmark = "dompi_scraper.bench.run_benchmark:main"
dompi-benchmark-analyze = "dompi_scraper.bench.analyze_results:main"
dompi-benchmark-validate = "dompi_scraper.bench.validate_env:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
